stats: remove tracking of expiring records
The predict module doesn't use this way since 965bab926f (v1.3.2),
and there seems to be no other likely use case.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Knot Resolver 2.X.Y (2018-0M-DD)
 
 Incompatible changes
 --------------------
+- stats: remove tracking of expiring records (predict uses another way)
 - systemd: more chages in default unit files (TODO)
 
 Bugfixes
